--- a/demo/styles.css
+++ b/demo/styles.css
@@ -1,12 +1,19 @@
 body {
-	font: 13px Arial,sans-serif;
+	background: #222;
+	color: #ccc;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+	font-size: 13px;
 	margin: 0 auto;
 	max-width: 100%;
 	width: 1000px;
 }
 
 a {
-	color: #090;
+	color: #b5c6d0;
+}
+a:not([class]):hover {
+	color: #fff;
+	filter: drop-shadow(.07em .07em .14em #f0fc) drop-shadow( -.07em -.07em .14em #f0fc);
 }
 
 button {
@@ -18,8 +25,9 @@ button.active {
 	background: #444;
 	border: none;
 	box-shadow: inset 1px 1px 0 #000;
-	color: #eee;
+	color: #0f0;
 	padding: 8px;
+	text-shadow: 2px 2px 10px #0f08, -2px -2px 10px #0f08;
 }
 
 canvas {
@@ -41,6 +49,18 @@ fieldset:disabled {
 header {
 	position: relative;
 }
+h1 {
+	color: #dfe6eb;
+	filter: drop-shadow(2px 2px 0 #000);
+}
+h2 {
+	margin: 1.5em 0 1em;
+}
+
+hr {
+	border-color: #8888;
+	border-width: 0 0 1px;
+}
 
 img {
 	max-width: 100%;
@@ -54,6 +74,10 @@ input[type="text"],
 select {
 	margin: 6px 0;
 	padding: 6px;
+}
+
+ul {
+	line-height: 1.6;
 }
 
 .big {
@@ -80,19 +104,47 @@ select {
 	display: block;
 }
 
+.logo {
+	background: linear-gradient(to bottom, #f2f6f8 0%, #d8e1e7 50%, #b5c6d0 51%, #e0eff9 100%);
+	background-clip: text;
+	font-family: Orbitron, sans-serif;
+	padding-right: .5em;
+	position: relative;
+	text-decoration: none;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.logo:hover::after {
+	animation: shine .5s ease-in-out;
+	color: #fff;
+	content: 'audioMotion-analyzer';
+	left: 0;
+	mask-image: linear-gradient(-75deg, transparent 45%, #000 50%, transparent 55%);
+	mask-size: 200%;
+	position: absolute;
+	top: 0;
+	-webkit-mask-position: -50%;
+	-webkit-text-fill-color: #fff;
+}
+
+@keyframes shine {
+	0% { -webkit-mask-position: 110%; }
+	100% { -webkit-mask-position: -10%; }
+}
+
 #audio {
 	width: 100%;
 }
 
 .analyzer-configuration {
-	background: #f5f5f5;
-	border: 1px solid #ccc;
+	background: #fff1;
+	border: 1px solid #ccc8;
 	margin-bottom: 20px;
 	padding: 10px 0;
 }
 
 .credits {
-	color: #030;
 	font-size: 12px;
 	margin: 40px 0;
 	text-align: center;
