--- a/demo/styles.css
+++ b/demo/styles.css
@@ -44,7 +44,7 @@ code {
 fieldset {
 	border: 1px dotted #666;
 	display: inline-block;
-	height: 70px;
+	min-height: 70px;
 	vertical-align: top;
 }
 fieldset:disabled {
@@ -79,8 +79,9 @@ input[type="range"] {
 }
 
 input[type="text"],
+input[type="number"],
 select {
-	margin: 6px 0;
+	margin-top: 6px;
 	padding: 6px;
 }
 
