--- a/demo/styles.css
+++ b/demo/styles.css
@@ -19,6 +19,10 @@ a:not([class]):hover {
 	filter: drop-shadow(.07em .07em .14em #f0fc) drop-shadow( -.07em -.07em .14em #f0fc);
 }
 
+audio {
+	height: 40px;
+}
+
 button {
 	margin: 5px;
 	padding: 6px;
@@ -208,10 +212,6 @@ ul {
 	background-size: cover;
 }
 
-#container1 {
-	margin-bottom: 15px;
-}
-
 .center {
 	text-align: center;
 }
@@ -242,16 +242,19 @@ ul {
 	justify-content: space-evenly;
 }
 
-.main {
-	display: inline-block;
-	margin-right: 20px;
-	width: 640px;
+.multi-block {
+	display: grid;
+	grid-gap: 20px;
+	grid-template: 1fr 1fr / 1fr 1fr 1fr;
+	height: 340px;
+	margin-bottom: 10px;
 }
 
-.aside {
-	display: inline-block;
-	vertical-align: top;
-	width: 320px;
+.colspan-2 {
+	grid-column: span 2;
+}
+.rowspan-2 {
+	grid-row: span 2;
 }
 
 .selector {
