--- a/demo/styles.css
+++ b/demo/styles.css
@@ -188,7 +188,26 @@ ul {
 
 /* minimal demo */
 #container {
+	display: flex;
 	height: 60vh;
+}
+
+#notice {
+	font-size: 15px;
+	line-height: 1.6;
+	margin: auto;
+	max-width: 100%;
+	width: 800px;
+}
+#notice p {
+	margin: 1.6em 0;
+}
+
+#start-button {
+	display: block;
+	margin: 40px auto;
+	padding: 10px;
+	width: 200px;
 }
 
 /* fluid full-width analyzer (single instance demo) */
