--- a/demo/styles.css
+++ b/demo/styles.css
@@ -19,6 +19,11 @@ a:not([class]):hover {
 audio {
 	height: 40px;
 }
+audio,
+video {
+	display: block;
+	width: 100%;
+}
 
 button {
 	margin: 5px;
@@ -108,6 +113,10 @@ ul {
 	margin-right: 1em;
 }
 
+.topbar {
+	margin: 10px 0;
+}
+
 .label {
 	color: #fff;
 	display: inline-block;
@@ -153,12 +162,6 @@ ul {
 	100% { -webkit-mask-position: -10%; }
 }
 
-#audio,
-#video {
-	display: block;
-	width: 100%;
-}
-
 .analyzer-configuration {
 	background: #fff1;
 	border: 1px solid #ccc8;
@@ -186,6 +189,14 @@ ul {
 	margin-left: .5em;
 }
 
+#btn_mic {
+	font-size: 150%;
+	padding: 1px 12px;
+}
+#btn_mic.active {
+	padding: 3px 14px;
+}
+
 /* minimal demo */
 #container {
 	display: flex;
@@ -203,11 +214,16 @@ ul {
 	margin: 1.6em 0;
 }
 
-#start-button {
+#btn_start,
+#btn_destroy {
+	cursor: pointer;
 	display: block;
 	margin: 40px auto;
 	padding: 10px;
 	width: 200px;
+}
+#btn_destroy {
+	display: none;
 }
 
 /* fluid full-width analyzer (single instance demo) */
@@ -255,7 +271,6 @@ ul {
 	align-items: center;
 	display: flex;
 	justify-content: space-between;
-	margin: 10px 0;
 }
 
 .evenly {
