--- a/demo/styles.css
+++ b/demo/styles.css
@@ -38,6 +38,9 @@ button.active {
 	padding: 8px;
 	text-shadow: 2px 2px 10px #0f08, -2px -2px 10px #0f08;
 }
+button.full-width {
+	width: 100%;
+}
 
 canvas {
 	display: block;
@@ -130,8 +133,8 @@ ul {
 }
 fieldset .label,
 fieldset button {
-	margin-left: 4px;
-	margin-right: 4px;
+	margin-left: 2px;
+	margin-right: 2px;
 }
 
 .slim {
