--- a/tools/styles.css
+++ b/tools/styles.css
@@ -6,8 +6,12 @@ body {
 button, input, select {
 	font: inherit;
 	margin-top: 1em;
+	min-width: 100px;
 	padding: 4px;
-	width: 100%;
+}
+button {
+	padding-left: 2em;
+	padding-right: 2em;
 }
 
 h1 {
@@ -17,11 +21,10 @@ h1, h2 {
 	text-align: center;
 }
 
-label:not(.filterSelector) {
+label {
 	display: block;
 	margin: 1em 1em 0 0;
 	white-space: nowrap;
-	width: 100%;
 }
 
 table {
@@ -51,14 +54,20 @@ table td {
 }
 
 #tableFilters {
+	max-width: 700px;
 	table-layout: fixed;
-	width: 700px;
+	width: 100%;
 }
 #tableFilters td {
 	text-align: right;
 }
 #tableFilters tbody tr:hover {
 	background: #e0ffe0;
+}
+
+.absolute-center {
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 .bar {
@@ -73,6 +82,10 @@ table td {
 	border-radius: 10px;
 	display: inline-block;
 	padding: 6px 12px;
+}
+.bullet.round {
+	margin-right: 6px;
+	padding: 6px;
 }
 input:not(:checked) + .bullet {
 	opacity: .2;
@@ -90,30 +103,40 @@ input:not(:checked) + .bullet {
 	display: flex;
 	justify-content: space-around;
 	margin: 20px;
+	padding-bottom: 80px;
 }
 
 .credits {
-	bottom: 2em;
+	background: #fffc;
+	backdrop-filter: blur(3px);
+	bottom: 0;
 	font-size: .8rem;
 	line-height: 1.6;
+	margin: 0;
+	padding: 2em;
 	position: fixed;
 	text-align: center;
+	width: 45vw;
 }
 
 .even {
 	background: #fff;
 }
 
-#filterLegend {
-	margin: 2em 0;
+#legend {
+	margin: 2em 0 1em;
 	text-align: center;
 }
 
-.filterSelector {
+#legend label {
 	cursor: pointer;
+	display: inline;
 	margin-right: 1.5em;
 }
-.filterSelector input {
+#legend label:last-child {
+	margin-right: 0;
+}
+#legend input {
 	display: none;
 }
 
@@ -123,8 +146,17 @@ input:not(:checked) + .bullet {
 	justify-content: space-between;
 }
 
+.grid {
+	display: grid;
+}
+.grid-3-cols {
+	grid-template-columns: repeat(3, 1fr);
+}
+
 .info {
 	border-bottom: 1px dotted #080;
+	color: inherit;
+	text-decoration: none;
 	position: relative;
 }
 .info:hover::before {
@@ -143,6 +175,10 @@ input:not(:checked) + .bullet {
 	z-index: 2;
 }
 
+.justify-center {
+	justify-items: center;
+}
+
 th .info {
 	position: static;
 }
@@ -152,4 +188,41 @@ th .info:hover::before {
 
 .onekhz {
 	background: #f0f0f0;
+}
+
+.note {
+	font-size: .85em;
+	margin-bottom: 2em;
+	text-align: center;
+}
+.note.margin-top {
+	margin-bottom: 0;
+	margin-top: 2em;
+}
+.note > div {
+	margin: 0 auto;
+	text-align: left;
+	width: 85%;
+}
+.note table {
+	margin: 0 auto;
+}
+.note table th, .note table td {
+	border-left-width: 0;
+	border-right-width: 0;
+	padding: 4px 20px;
+	text-align: left;
+}
+
+.settings button,
+.settings input,
+.settings label,
+.settings select {
+	width: 100%;
+}
+
+.summary {
+	font-size: 1.25rem;
+	line-height: 2;
+	margin-top: 2em;
 }
