--- a/demo/styles.css
+++ b/demo/styles.css
@@ -176,11 +176,19 @@ fieldset button {
 	-webkit-mask-size: 200%;
 }
 
-.msg {
+.warn {
+	color: #f77;
+	font-size: 1.25rem;
 	left: 50%;
 	position: absolute;
+	text-align: center;
 	top: 50%;
 	transform: translate(-50%, -50%);
+	width: 100%;
+}
+
+input.wide-range {
+	width: 100px;
 }
 
 @keyframes shine {
@@ -269,7 +277,7 @@ fieldset button {
 	background: linear-gradient(to top, transparent 0%, #222 28px);
 	margin-bottom: -10px !important;
 	padding-bottom: 30px;
-	pointer-events: none;
+/*	pointer-events: none; */
 	position: sticky;
 	top: 0;
 	z-index: 1;
